# rootfs-spawn

./: .gitignore  README.md  pyproject.toml
configs/: ctl.rootfs
configs/defaults/debian/: cache  cleanup  init  packages  release  spawn
configs/defaults/debian/provision/: apt.compact  environment  locales  lxc.apt  lxc.mounts  motd  skel  upgrades
configs/tests/: debian.rootfs
src/rootfs_spawn/: grammar.lark  main.py  parser.py  types.py
src/rootfs_spawn/templates/: debian.rootfs
