[project]
name = "rootfs-spawn"
version = "0.0.1"
description = "A small Python tool to spawn new distros by populating the rootfs using the respective mechanism (debootstrap, dnf, pacstrap, ...)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sh>=2.2", "defopt==6.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rootfs-spawn = "rootfs_spawn.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rootfs_spawn"]
